--- a/SolidCabApp/package.json
+++ b/SolidCabApp/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "ajv": "^8.17.1",
     "dayjs": "^1.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
