--- a/SolidCabApp/.gitignore
+++ b/SolidCabApp/.gitignore
@@ -36,7 +36,7 @@ local.properties
 
 # node.js
 #
-node_modules/
+# node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
@@ -73,7 +73,7 @@ yarn-error.log
 *.swo
 
 # Misc
-*.log
-*.orig
-.tmp
-.temp
+# *.log
+# *.orig
+# .tmp
+# .temp
